--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:cardview-v7:24.2.0'
     testCompile 'junit:junit:4.12'
     compile project(':sectioned-recyclerview')
 }
