--- a/sectioned-recyclerview/src/main/AndroidManifest.xml
+++ b/sectioned-recyclerview/src/main/AndroidManifest.xml
@@ -1,8 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="zhukic.library">
-
-    <application android:allowBackup="true"
-        android:supportsRtl="true">
-
-    </application>
-
-</manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="zhukic.library" />
