Add bintray gradle plugin.

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,5 +1,6 @@
 ext.versions = [
         androidGradlePlugin : '3.2.1',
+        bintrayGradlePlugin : '1.8.4',
         compileSdk          : 28,
         targetSdk           : 28,
         minSdk              : 16,
@@ -15,7 +16,8 @@ ext.versions = [
 ]
 
 ext.gradlePlugins = [
-        androidGradlePlugin : "com.android.tools.build:gradle:$versions.androidGradlePlugin"
+        androidGradlePlugin : "com.android.tools.build:gradle:$versions.androidGradlePlugin",
+        bintrayGradlePlugin : "com.jfrog.bintray.gradle:gradle-bintray-plugin:$versions.bintrayGradlePlugin"
 ]
 
 ext.testLibraries = [
