Add bintray release plugin.

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,6 +1,6 @@
 ext.versions = [
         androidGradlePlugin : '3.2.1',
-        bintrayGradlePlugin : '1.8.4',
+        bintrayReleasePlugin : '0.8.1',
         compileSdk          : 28,
         targetSdk           : 28,
         minSdk              : 16,
@@ -17,7 +17,7 @@ ext.versions = [
 
 ext.gradlePlugins = [
         androidGradlePlugin : "com.android.tools.build:gradle:$versions.androidGradlePlugin",
-        bintrayGradlePlugin : "com.jfrog.bintray.gradle:gradle-bintray-plugin:$versions.bintrayGradlePlugin"
+        bintrayReleasePlugin : "com.novoda:bintray-release:$versions.bintrayReleasePlugin"
 ]
 
 ext.testLibraries = [
