--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
     dependencies {
         classpath gradlePlugins.androidGradlePlugin
-        classpath gradlePlugins.bintrayGradlePlugin
+        classpath gradlePlugins.bintrayReleasePlugin
     }
 }
 
